; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/shell32/wine/extr_classes.c_HCR_GetClassNameW.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/shell32/wine/extr_classes.c_HCR_GetClassNameW.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i64 0, align 8
@HCR_GetClassNameW.wszLocalizedString = internal constant [16 x i8] c"LocalizedString\00", align 16
@swEmpty = common dso_local global i32 0, align 4
@TRUE = common dso_local global i64 0, align 8
@CLSID_ShellDesktop = common dso_local global i32 0, align 4
@shell32_hInstance = common dso_local global i32 0, align 4
@IDS_DESKTOP = common dso_local global i32 0, align 4
@CLSID_MyComputer = common dso_local global i32 0, align 4
@IDS_MYCOMPUTER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"-- %s\0A\00", align 1
@CLSID_AdminFolderShortcut = common dso_local global i32 0, align 4
@CLSID_ControlPanel = common dso_local global i32 0, align 4
@CLSID_MyDocuments = common dso_local global i32 0, align 4
@CLSID_RecycleBin = common dso_local global i32 0, align 4
@HKEY_CURRENT_USER = common dso_local global i32 0, align 4
@IDS_ADMINISTRATIVETOOLS = common dso_local global i32 0, align 4
@IDS_CONTROLPANEL = common dso_local global i32 0, align 4
@IDS_PERSONAL = common dso_local global i32 0, align 4
@IDS_RECYCLEBIN_FOLDER_NAME = common dso_local global i32 0, align 4
@RRF_RT_REG_SZ = common dso_local global i32 0, align 4
@S_OK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @HCR_GetClassNameW(i32 %0, i64* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i64* %1, i64** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = load i64, i64* @FALSE, align 8
  store i64 %10, i64* %8, align 8
  %11 = load i32, i32* %6, align 4
  store i32 %11, i32* %9, align 4
  %12 = load i64*, i64** %5, align 8
  %13 = getelementptr inbounds i64, i64* %12, i64 0
  store i64 0, i64* %13, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i64 @HCR_RegOpenClassIDKey(i32 %14, i32* %7)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %35

17:                                               ; preds = %3
  %18 = load i32, i32* %7, align 4
  %19 = load i64*, i64** %5, align 8
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @RegLoadMUIStringW(i32 %18, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @HCR_GetClassNameW.wszLocalizedString, i64 0, i64 0), i64* %19, i32 %20, i32* null, i32 0, i32* null)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %30

23:                                               ; preds = %17
  %24 = load i32, i32* %7, align 4
  %25 = load i32, i32* @swEmpty, align 4
  %26 = load i64*, i64** %5, align 8
  %27 = ptrtoint i64* %26 to i32
  %28 = call i32 @RegQueryValueExW(i32 %24, i32 %25, i32 0, i32* null, i32 %27, i32* %6)
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %32, label %30

30:                                               ; preds = %23, %17
  %31 = load i64, i64* @TRUE, align 8
  store i64 %31, i64* %8, align 8
  br label %32

32:                                               ; preds = %30, %23
  %33 = load i32, i32* %7, align 4
  %34 = call i32 @RegCloseKey(i32 %33)
  br label %35

35:                                               ; preds = %32, %3
  %36 = load i64, i64* %8, align 8
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %43

38:                                               ; preds = %35
  %39 = load i64*, i64** %5, align 8
  %40 = getelementptr inbounds i64, i64* %39, i64 0
  %41 = load i64, i64* %40, align 8
  %42 = icmp ne i64 %41, 0
  br i1 %42, label %73, label %43

43:                                               ; preds = %38, %35
  %44 = load i32, i32* %4, align 4
  %45 = call i64 @IsEqualIID(i32 %44, i32* @CLSID_ShellDesktop)
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %57

47:                                               ; preds = %43
  %48 = load i32, i32* @shell32_hInstance, align 4
  %49 = load i32, i32* @IDS_DESKTOP, align 4
  %50 = load i64*, i64** %5, align 8
  %51 = load i32, i32* %9, align 4
  %52 = call i64 @LoadStringW(i32 %48, i32 %49, i64* %50, i32 %51)
  %53 = icmp ne i64 %52, 0
  br i1 %53, label %54, label %56

54:                                               ; preds = %47
  %55 = load i64, i64* @TRUE, align 8
  store i64 %55, i64* %8, align 8
  br label %56

56:                                               ; preds = %54, %47
  br label %72

57:                                               ; preds = %43
  %58 = load i32, i32* %4, align 4
  %59 = call i64 @IsEqualIID(i32 %58, i32* @CLSID_MyComputer)
  %60 = icmp ne i64 %59, 0
  br i1 %60, label %61, label %71

61:                                               ; preds = %57
  %62 = load i32, i32* @shell32_hInstance, align 4
  %63 = load i32, i32* @IDS_MYCOMPUTER, align 4
  %64 = load i64*, i64** %5, align 8
  %65 = load i32, i32* %9, align 4
  %66 = call i64 @LoadStringW(i32 %62, i32 %63, i64* %64, i32 %65)
  %67 = icmp ne i64 %66, 0
  br i1 %67, label %68, label %70

68:                                               ; preds = %61
  %69 = load i64, i64* @TRUE, align 8
  store i64 %69, i64* %8, align 8
  br label %70

70:                                               ; preds = %68, %61
  br label %71

71:                                               ; preds = %70, %57
  br label %72

72:                                               ; preds = %71, %56
  br label %73

73:                                               ; preds = %72, %38
  %74 = load i64*, i64** %5, align 8
  %75 = call i32 @debugstr_w(i64* %74)
  %76 = call i32 @TRACE(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %75)
  %77 = load i64, i64* %8, align 8
  ret i64 %77
}

declare dso_local i64 @HCR_RegOpenClassIDKey(i32, i32*) #1

declare dso_local i32 @RegLoadMUIStringW(i32, i8*, i64*, i32, i32*, i32, i32*) #1

declare dso_local i32 @RegQueryValueExW(i32, i32, i32, i32*, i32, i32*) #1

declare dso_local i32 @RegCloseKey(i32) #1

declare dso_local i64 @IsEqualIID(i32, i32*) #1

declare dso_local i64 @LoadStringW(i32, i32, i64*, i32) #1

declare dso_local i32 @TRACE(i8*, i32) #1

declare dso_local i32 @debugstr_w(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
